--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
       - MYSQL_USER=app
       - MYSQL_PASSWORD=pass
 
-  postgres:
-    image: postgres:12-alpine
-    ports:
-      - '5432:5432'
-    environment:
-      - POSTGRES_DB=db
-      - POSTGRES_USER=app
-      - POSTGRES_PASSWORD=pass
+#  postgres:
+#    image: postgres:12-alpine
+#    ports:
+#      - '5432:5432'
+#    environment:
+#      - POSTGRES_DB=db
+#      - POSTGRES_USER=app
+#      - POSTGRES_PASSWORD=pass
