--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,26 @@
-version: "3.7"
+version: "3.0"
 services:
+  gate-simulator:
+    build: .
+    image: gate-simulator:1.0
+    ports:
+      - '9999:9999'
+
   mysql:
     image: mysql:8.0
     ports:
       - '4449:3306'
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
-      - MYSQL_DATABASE=db
+      - MYSQL_DATABASE=app
       - MYSQL_USER=app
       - MYSQL_PASSWORD=pass
 
-#  postgres:
-#    image: postgres:12-alpine
-#    ports:
-#      - '5432:5432'
-#    environment:
-#      - POSTGRES_DB=db
-#      - POSTGRES_USER=app
-#      - POSTGRES_PASSWORD=pass
+  postgres:
+    image: postgres:12-alpine
+    ports:
+      - '5432:5432'
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=pass
